# track_stock

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml
goods_map/: forms.py  mixin.py  settings.py  urls.py  views.py
goods_map/count/: apps.py  forms.py  models.py  urls.py  views.py
goods_map/count/migrations/: 0001_initial.py
goods_map/gallery/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
goods_map/gallery/migrations/: 0001_initial.py  0002_alter_imagemodel_images.py  0003_imagemodel_name.py  0004_alter_imagemodel_name.py  0005_remove_imagemodel_name.py  0006_imagemodel_name.py  0007_remove_imagemodel_name.py
goods_map/goods/: admin.py  forms.py  models.py  urls.py  views.py
goods_map/goods/migrations/: 0001_initial.py  0002_alter_goodsmodel_prise.py  0003_rename_prise_goodsmodel_cost_price_and_more.py  0004_alter_goodsmodel_cost_price.py  0005_alter_goodsmodel_cost_price.py  0006_alter_goodsmodel_cost_price.py  0007_alter_goodsmodel_cost_price_and_more.py  0008_countgoods.py  0009_rename_datetime_countgoods_name.py  0010_remove_countgoods_name_countgoods_datetime.py  0011_alter_countgoods_datetime.py  0012_alter_countgoods_datetime.py  0013_alter_countgoods_datetime.py  0014_alter_countgoods_datetime.py  0015_delete_countgoods.py  0016_goodsmodel_stock_id.py  0017_rename_stock_id_goodsmodel_stock.py  0019_goodsmodel_images.py  (+10 more)
goods_map/stock/: admin.py  forms.py  models.py  urls.py  views.py
goods_map/templates/: base.html  delete.html  edit.html  headers.html  index.html  login.html
staticfiles/: staticfiles.json
(+9 files in other folders)
