[tool.poetry]
name = "track-stock"
version = "0.1.0"
description = ""
authors = ["Aliev Nurlan <nualiev420@gmail.com>"]
readme = "README.md"
packages = [{include = "goods_map"}]

[tool.poetry.dependencies]
python = "^3.10.1"
django = "^4.2.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
django-bootstrap4 = "^23.2"
flake8 = "^6.0.0"
dj-database-url = "^2.0.0"
django-filter = "^23.2"
pillow = "^10.0.0"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
rollbar = "^0.16.3"
django-selectel-storage = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
